Generics & performance tweaks in data provider domains